# extensions-web

./: .dockerignore  .gitignore  .gitlab-ci.yml  .renovaterc.json  .trivyignore  README.md  README.rst  build.sh  extensions-web.doap  manage.py  migrate-1.4-1.8.sh  pyproject.toml  regenerate-dependencies.sh  requirements.dev.txt  requirements.ego.in  requirements.ego.txt  requirements.in  requirements.txt  setup.cfg
docker/: Dockerfile  docker-compose.yml  wsgi.ini
etc/: sweettooth.httpd.conf.example  sweettooth.nginx.conf.example  sweettooth.systemd.service.example  wsgi.ini.example
openshift/docker/: Dockerfile  build.sh  default.conf.template  docker-compose.yml  docker-entrypoint.sh  wsgi.ini
openshift/docker/nginx/: Dockerfile  nginx.conf
openshift/docker/scripts/: build_xapian.sh  install-xapian.sh  prepare_dirs.sh  prepare_ego.sh
openshift/jobs/: reindex-extensions.yml
openshift/templates/: extensions-web-nginx.json  extensions-web-nginx.yml
po/: LINGUAS  ar.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  extensions-web.pot  fa.po  fi.po  fr.po  fur.po  fy.po  gl.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  kab.po  kk.po  ko.po  kw.po  lt.po  ms.po  nb.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  (+12 more)
postgres/: dump.sh  load.sh
shexli/: pyproject.toml
shexli/shexli/: __init__.py  __main__.py  api_data.py  ast.py  cli.py  models.py  spec.py
shexli/shexli/analyzer/: __init__.py  compat.py  context.py  core.py  engine.py  evidence.py  js.py  metadata.py  package.py  paths.py  patterns.py  reachability.py  reachability_graph.py  safety.py  spawn.py
shexli/shexli/analyzer/facts/: __init__.py  base.py  extension.py  file.py  lifecycle.py  lifecycle_preenable.py
shexli/shexli/analyzer/file/: __init__.py  facts.py  indices.py  model.py
shexli/shexli/analyzer/lifecycle/: __init__.py  base.py  collect.py  cross_file.py  preenable.py  rules.py  types.py
shexli/shexli/analyzer/rules/: __init__.py  api_misuse.py  artifact.py  clipboard.py  constants.py  imports.py  lifecycle.py  logging.py  metadata.py  obfuscation.py  prefs.py  session_modes.py  subprocess.py  version_compat.py
shexli/shexli/analyzer/rules/api/: __init__.py  context.py  contract.py
shexli/shexli/analyzer/rules/lifecycle/: __init__.py  common.py  objects.py  pre_enable_rule.py  release.py  signals.py  soup.py  sources.py
shexli/shexli/data/: api.toml
shexli/tests/: test_smoke.py
shexli/tests/data/bad_donations/: extension.js  metadata.json
shexli/tests/data/bad_extension/: extension.js  metadata.json
shexli/tests/data/bad_subprocess/: extension.js  metadata.json
shexli/tests/data/builtin_map_cleanup/: extension.js  metadata.json
shexli/tests/data/dynamic_import_context/: helper.js  metadata.json  prefs.js
shexli/tests/data/gjs_module_spawn/: extension.js  helper.js  metadata.json
shexli/tests/data/gnome48_ok/: extension.js  metadata.json
shexli/tests/data/gnome49_break/: extension.js  metadata.json
shexli/tests/data/gnome50_break/: extension.js  metadata.json
shexli/tests/data/good_cleanup/: extension.js  metadata.json
shexli/tests/data/legacy_global_release/: extension.js  metadata.json
shexli/tests/data/legacy_global_scope/: extension.js  metadata.json
shexli/tests/data/legacy_import_context/: Helper.js  extension.js  metadata.json  prefs.js
shexli/tests/data/legacy_import_context/preferences/: Prefs.js
shexli/tests/data/legacy_shell_import/: extension.js  metadata.json
shexli/tests/data/prefs_import_context/: helper.js  metadata.json  prefs.js
shexli/tests/data/release_owned_ref/: extension.js  metadata.json
shexli/tests/data/source_remove_cleanup/: extension.js  metadata.json
shexli/tests/data/unreachable_js/: extension.js  metadata.json  unused.js
sweettooth/: celery.py  context_processors.py  decorators.py  exceptions.py  migrations.py  settings.py  settings_test.py  testutils.py  urls.py  utils.py  wsgi.py
sweettooth/api/: widgets.py
sweettooth/api/v1/: urls.py  views.py
sweettooth/auth/: __init__.py  apps.py  authentication.py  backends.py  context_processors.py  forms.py  serializers.py  tests.py  urls.py  views.py
sweettooth/auth/templates/: maintenance.html
sweettooth/errorreports/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
sweettooth/errorreports/migrations/: 0001_initial.py  0002_alter_errorreport_id.py  0003_delete_errorreport.py
sweettooth/extensions/: admin.py  documents.py  feeds.py  fields.py  form_fields.py  forms.py  models.py  renderers.py  search.py  serializers.py  tests.py  urls.py  views.py
sweettooth/extensions/migrations/: 0001_initial.py  0002_auto_20161027_1641.py  0003_auto_20181216_2101.py  0004_auto_20181216_2102.py  0005_auto_20190112_1733.py  0006_auto_20191123_2146.py  0007_auto_20201219_2046.py  0008_auto_20200511_1019.py  0008_auto_20210225_1248.py  0009_auto_20200523_1243.py  0009_shell40_minor_version.py  0010_extension_recommended.py  0010_extension_session_unlock_dialog.py  0010_session_modes.py  0011_auto_20200511_1019.py  0011_extension_allow_comments.py  0012_auto_20200511_1019.py  0012_auto_20200523_1243.py  0012_extensionversion_extension_id__status_idx.py  0013_auto_20200511_1019.py  0013_auto_20200523_1243.py  0013_donationurl.py  0013_extension_recommended.py  0014_alter_donationurl_url_type.py  0014_auto_20200511_1019.py  0014_auto_20200523_1243.py  0014_extension_rating.py  0014_extension_recommended.py  0015_alter_bigint.py  0015_auto_20200523_1243.py  0015_extension_rating.py  0015_extension_recommended.py  0016_alter_donationurl_url_type.py  0016_extension_rating.py  0016_extension_recommended.py  (+11 more)
sweettooth/ratings/: __init__.py  admin.py  forms.py  models.py  moderation.py  tests.py  urls.py  views.py
sweettooth/review/: context_processors.py  diffutils.py  models.py  shexli.py  tasks.py  tests.py  urls.py  views.py
sweettooth/templates/: 404.html  500.html  base.html  footer_links.html  maintenance.html  robots.txt  usermenu.html
sweettooth/users/: admin.py  models.py  serializers.py  views.py
(+131 files in other folders)
